force-app/main/default/objects/synety__Synety__c/synety__Synety__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CloudCall Plugin Config</label>
</CustomObject>