force-app/main/default/objects/synety__Synety__c/fields/synety__Add_New_Record_Screen_Setting__c.field-meta.xml
<CustomField>
    <fullName>synety__Add_New_Record_Screen_Setting__c</fullName>
    <label>Add New Record Screen Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>