force-app/main/default/objects/synety__Synety__c/fields/synety__CloudCall_Sync_Supported__c.field-meta.xml
<CustomField>
    <fullName>synety__CloudCall_Sync_Supported__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>to be used by the CloudCall Sync API</inlineHelpText>
    <label>CloudCall Sync Supported?</label>
    <type>Checkbox</type>
</CustomField>