force-app/main/default/objects/synety__Synety__c/fields/synety__IsCRMEntityMappingUpdated__c.field-meta.xml
<CustomField>
    <fullName>synety__IsCRMEntityMappingUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CRM Entity Mapping Updated on API</label>
    <type>Checkbox</type>
</CustomField>