force-app/main/default/objects/synety__Synety__c/fields/synety__Related_to_Data_Population_Setting__c.field-meta.xml
<CustomField>
    <fullName>synety__Related_to_Data_Population_Setting__c</fullName>
    <label>Related to Data Population Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>