force-app/main/default/objects/synety__Synety__c/fields/synety__Related_to_Required_when_Prepopulated__c.field-meta.xml
<CustomField>
    <fullName>synety__Related_to_Required_when_Prepopulated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related to Required when Prepopulated?</label>
    <type>Checkbox</type>
</CustomField>