force-app/main/default/objects/synety__Synety__c/fields/synety__Scheduled_Job_Created__c.field-meta.xml
<CustomField>
    <fullName>synety__Scheduled_Job_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled Job Created?</label>
    <type>Checkbox</type>
</CustomField>